tests/characterization/snapshots/backend_versions_sorts_patch_releases_numerically.snap
---
source: tests/characterization/versions.rs
expression: output
---
exit: 0
--- stdout ---
gateway:
  v1.0.99
  v1.0.10
  v1.0.9
--- stderr ---
--- end ---
