tests/characterization/snapshots/version_resolves_latest_when_cli_version_is_empty.snap
---
source: tests/characterization/versions.rs
expression: output
---
exit: 0
--- stdout ---
oqtopus v1.0.99
--- stderr ---
--- end ---
